--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/Background.png");
+    background-image: url("Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
@@ -117,11 +117,6 @@ body {
     color: var(--branco-principal);
 }
 
-.rodape {
-    text-align: center;
-    margin: 5em 3em;
-}
-
 .rodape__lista {
     display: flex;
     justify-content: center;
@@ -139,6 +134,10 @@ body {
     margin: 1em 0;
     color: var(--cinza-secundario);
     font-size: 14px;
+}
+.rodape {
+    text-align: center;
+    margin: 5em 3em;
 }
 
 .lista__link a:hover {
